# norn

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TECH_STACK.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  todo.md  vite.config.ts  vitest.config.ts
.codex/environments/: environment.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
design/Web-Prototype/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  index.html
design/logo/last_group_svg_pack/: preview.html
doc/: 产品设计定位与边界.md  发布新版本指南.md  轻量代码编辑器与 Git 管理工具需求文档.md
public/file-icons/catppuccin/: README.md
scripts/: check-release-version.mjs  local-ci.mjs  release.mjs  sync-catppuccin-file-icons.mjs  tauri-dev-instance.mjs  tauri-runner.mjs
src/: app.tsx  main.tsx  styles.css  styles.windows.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs  process.rs
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  menubar.tsx  scroll-area.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/features/workbench/: about.ts  branch-tree.ts  change-tree.ts  check-updates.ts  codemirror-setup.ts  conflict-parse.ts  constants.ts  diff-parse.ts  drafts.ts  editor-cjk-word-select.ts  (+29 more)
src/lib/: utils.ts
temp/: fan-stack-tabs.html
tests/: setup.ts
tests/components/: file-tree.test.tsx  git-panel.test.tsx  quick-search.test.tsx  settings-page.test.tsx  status-bar.test.tsx  titlebar.test.tsx  use-document-session.test.tsx  use-panel-layout.test.tsx  use-workspace-tree.test.tsx  workbench-page.test.tsx
tests/e2e/: editor-git-gutter.spec.ts  editor-tab-menu.spec.ts  file-errors.spec.ts  file-tree-crud.spec.ts  helpers.ts  large-files.spec.ts  settings-and-platform.spec.ts  smoke.spec.ts  tauri-mock.ts  workflows.spec.ts
tests/unit/: actions-registry.test.ts  actions.test.ts  branch-tree.test.ts  codemirror-search.test.ts  codemirror-setup.test.ts  conflict-parse.test.ts  diff-parse.test.ts  drafts.test.ts  editor-actions.test.ts  editor-cjk-word-select.test.ts  editor-git-gutter.test.ts  editor-highlighting.test.ts  editor-jump-history.test.ts  editor-linewise-clipboard.test.ts  editor-selection-search-keys.test.ts  editor-tab-geometry.test.ts  formatter.test.ts  git-graph.test.ts  lib-utils.test.ts  line-diff.test.ts  platform.test.ts  quick-search-highlight.test.ts  session.test.ts  settings-migration.test.ts  settings.test.ts  tree-selection.test.ts  update-schedule.test.ts  workbench-store.test.ts  workbench-utils-dom.test.ts  workbench-utils.test.ts  workspace-tree-reducers.test.ts
(+36 files in other folders)
