[package]
name = "norn"
version = "0.1.0"
description = "A lightweight code and Git workbench."
authors = ["Norn contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "norn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "=5.2.3"
notify-debouncer-mini = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
