[package]
name = "norn"
version = "0.2.1"
description = "A lightweight code and Git workbench."
authors = ["Norn contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "norn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8.35"
trash = "=5.2.3"
notify-debouncer-mini = "0.4"
ignore = "0.4"
regex = "1"

# 自动更新:updater 仅支持桌面端;process 用于更新装好后重启应用。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# 「复制为文件」:把文件引用写入系统剪贴板的原生格式(Windows CF_HDROP / macOS NSPasteboard)。
# 仅 Windows+macOS 需要;Linux 退回写文件名文本,故不在此处引入(避免拉入 X11 构建依赖)。
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
clipboard-rs = "0.2"

[dev-dependencies]
tempfile = "3.27.0"

# 发布构建优化:缩小二进制体积,直接减少冷启动时需从磁盘 page-in 的量。
# strip 去掉 ~4MB 符号表;lto + codegen-units=1 + opt-level="s" 压缩代码段。
# 代价是构建更慢(发版才用,可接受);不改 panic 行为(保留 unwind)。
[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
